feat: deploy card generate dinamically

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="top_fixed">
+    <section class="top__fixed">
         Frete gratis para todo o Brasil
     </section>
     <section class="hero">
@@ -33,73 +33,7 @@
                 <p>As marcas Beira Rio e Modare são as escolhas certas para fazerem seus pés ainda mais belos</p>
             </div>
             <section class="lista__produtos">
-                <div class="card__produto">
-                    <figure>
-                        <img src="./img/sanda-lia-conforto-modare-ultraconforto-pessego.png" alt="Sandália" />
-                    </figure>
-                    <div class="card__produto_detalhes">
-                        <h4>Sandália</h4>
-                        <h5>Modelo: verão</h5>
-                    </div>
-                    <p class="card__produto_preco">Preço: R$ 299,90</h6>
-                </div>
-
-                <div class="card__produto">
-                    <figure>
-                        <img src="./img/sanda-lia-conforto-modare-ultraconforto-pessego.png" alt="Sandália" />
-                    </figure>
-                    <div class="card__produto_detalhes">
-                        <h4>Sandália</h4>
-                        <h5>Modelo: verão</h5>
-                    </div>
-                    <p class="card__produto_preco">Preço: R$ 299,90</h6>
-                </div>
-
-                <div class="card__produto">
-                    <figure>
-                        <img src="./img/sanda-lia-conforto-modare-ultraconforto-pessego.png" alt="Sandália" />
-                    </figure>
-                    <div class="card__produto_detalhes">
-                        <h4>Sandália</h4>
-                        <h5>Modelo: verão</h5>
-                    </div>
-                    <p class="card__produto_preco">Preço: R$ 299,90</h6>
-                </div>
-
-                <div class="card__produto">
-                    <figure>
-                        <img src="./img/sanda-lia-conforto-modare-ultraconforto-pessego.png" alt="Sandália" />
-                    </figure>
-                    <div class="card__produto_detalhes">
-                        <h4>Sandália</h4>
-                        <h5>Modelo: verão</h5>
-                    </div>
-                    <p class="card__produto_preco">Preço: R$ 299,90</h6>
-                </div>
-
-                <div class="card__produto">
-                    <figure>
-                        <img src="./img/sanda-lia-conforto-modare-ultraconforto-pessego.png" alt="Sandália" />
-                    </figure>
-                    <div class="card__produto_detalhes">
-                        <h4>Sandália</h4>
-                        <h5>Modelo: verão</h5>
-                    </div>
-                    <p class="card__produto_preco">Preço: R$ 299,90</h6>
-                </div>
-                <div>
-                    <h2><span></span></h2>
-                </div>
-                <div class="card__produto">
-                    <figure>
-                        <img src="./img/sanda-lia-conforto-modare-ultraconforto-pessego.png" alt="Sandália" />
-                    </figure>
-                    <div class="card__produto_detalhes">
-                        <h4>Sandália</h4>
-                        <h5>Modelo: verão</h5>
-                    </div>
-                    <p class="card__produto_preco">Preço: R$ 299,90</h6>
-                </div>
+            <!-- Cards gerados dinamicamente -->
             </section>
     </main>
     </section>
