feat: deploy to show product details with its images

--- a/index.html
+++ b/index.html
@@ -40,28 +40,28 @@
         <section class="produto__detalhes">
             <div class="produto__detalhes_imagens">
                 <figure>
-                    <img src="./img/sandalia-conforto-modare-ultraconforto-pessego.png" alt="sandália">
+                    <img src="https://placehold.co/300x200" alt="sandália">
                 </figure>
                 <figure>
-                    <img src="./img/sandalia-conforto-modare-ultraconforto-pessego.png" alt="sandália">
+                    <img src="https://placehold.co/300x200" alt="sandália">
                 </figure>
                 <figure>
-                    <img src="./img/sandalia-conforto-modare-ultraconforto-pessego.png" alt="sandália">
+                    <img src="https://placehold.co/300x200" alt="sandália">
                 </figure>
                 <figure>
-                    <img src="./img/sandalia-conforto-modare-ultraconforto-pessego.png" alt="sandália">
+                    <img src="https://placehold.co/300x200" alt="sandália">
                 </figure>
                 <figure>
-                    <img src="./img/sandalia-conforto-modare-ultraconforto-pessego.png" alt="sandália">
+                    <img src="https://placehold.co/300x200" alt="sandália">
                 </figure>
                 <figure>
-                    <img src="./img/sandalia-conforto-modare-ultraconforto-pessego.png" alt="sandália">
+                    <img src="https://placehold.co/300x200" alt="sandália">
                 </figure>
                 <figure>
-                    <img src="./img/sandalia-conforto-modare-ultraconforto-pessego.png" alt="sandália">
+                    <img src="https://placehold.co/300x200" alt="sandália">
                 </figure>
                 <figure>
-                    <img src="./img/sandalia-conforto-modare-ultraconforto-pessego.png" alt="sandália">
+                    <img src="https://placehold.co/300x200" alt="sandália">
                 </figure>
             </div>
             <div class="produto__detalhes_info">
@@ -87,14 +87,12 @@
                     <ul>
                         <li>
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores deserunt, illum ex voluptas
-                                veniam aspernatur rerum nobis, ratione doloremque quam in reprehenderit blanditiis sequi vel
-                                ipsum quia iste eligendi libero.</p>
+                                veniam </p>
                         </li>
                         <li>
         
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates quia ducimus mollitia
-                                ipsa doloremque earum nostrum voluptatibus iusto minima. At delectus in cum voluptatem minus,
-                                eveniet similique expedita. Quis, illo.</p>
+                                ipsa .</p>
                         </li>
                     </ul>
                 </div>
