ref: Aula 10 - refactoring and deploy icon details toggle

--- a/index.html
+++ b/index.html
@@ -75,7 +75,34 @@
                 <div class="tamanho">
                     <h6>Tamanho</h6>
                     <div class="tamanhos">
-                        38 até 51
+                        <input type="radio" class="radio" name="size" id="size38" value="38">
+                        <label for="size38" class="numeros">38</label>
+                        <input type="radio" class="radio" name="size" id="size38" value="39">
+                        <label for="size39" class="numeros">39</label>
+                        <input type="radio" class="radio" name="size" id="size38" value="40">
+                        <label for="size40" class="numeros">40</label>
+                        <input type="radio" class="radio" name="size" id="size38" value="41">
+                        <label for="size41" class="numeros">41</label>
+                        <input type="radio" class="radio" name="size" id="size38" value="42">
+                        <label for="size42" class="numeros">42</label>
+                        <input type="radio" class="radio" name="size" id="size38" value="43">
+                        <label for="size43" class="numeros">43</label>
+                        <input type="radio" class="radio" name="size" id="size38" value="44">
+                        <label for="size44" class="numeros">44</label>
+                        <input type="radio" class="radio" name="size" id="size38" value="45">
+                        <label for="size45" class="numeros">45</label>
+                        <input type="radio" class="radio" name="size" id="size38" value="46">
+                        <label for="size46" class="numeros">46</label>
+                        <input type="radio" class="radio" name="size" id="size38" value="47">
+                        <label for="size47" class="numeros">47</label>
+                        <input type="radio" class="radio" name="size" id="size38" value="48">
+                        <label for="size48" class="numeros">48</label>
+                        <input type="radio" class="radio" name="size" id="size38" value="49">
+                        <label for="size49" class="numeros">49</label>
+                        <input type="radio" class="radio" name="size" id="size38" value="50">
+                        <label for="size50" class="numeros">40</label>
+                        <input type="radio" class="radio" name="size" id="size38" value="51">
+                        <label for="size51" class="numeros">51</label>
                     </div>
                 </div>
         
