--- a/index.html
+++ b/index.html
@@ -10,10 +10,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moda Shoes</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/media-source.css">
     <link rel="icon" href="./img/favicon-32x32.png" type="image/x-icon">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
-
 <body>
+    <header class="topo">
+        <div class="topo__marca">
+            <a href="" class="link_home">
+                <img src="img/logo-modaShoes.png" alt="logo moda Shoes">
+                <h1>Moda Shoes</h1>
+            </a>
+        </div>
+        <div class="btn__carrinho">
+            <span class="material-symbols-outlined icons">
+                shopping_cart
+            </span>
+            <span class="numero_itens">0</span>
+        </div>
+    </header>
     <section class="top__fixed">
         Frete gratis para todo o Brasil
     </section>
@@ -67,6 +85,7 @@
             <div class="produto__detalhes_info">
         
                 <div class="detalhes">
+                    <span>id</span>
                     <h4>Nome do produto</h4>
                     <h5>Descrição</h5>
                     <h6>Preço</h6>
@@ -136,6 +155,36 @@
                         rel="noopener noreferrer">Não sei meu CEP</a>
                 </details>
             </div>
+        </section>
+        <section class="carrinho">
+            <h2>Carrinho</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>id</th>
+                        <th>Produto</th>
+                        <th>Tamanho</th>
+                        <th>Preço</th>
+                        <th class="coluna_apagar">Apagar</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td class="coluna_apagar">-</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="3"><strong>TOTAL</strong></td>
+                        <td class="coluna_total">-</td>
+                        <td></td>
+                    </tr>
+                </tfoot>
+            </table>
         </section>
     </main>
     <script src="js/script.js"></script>
