feat: improve card details as aula 17

--- a/index.html
+++ b/index.html
@@ -185,9 +185,52 @@
                     </tr>
                 </tfoot>
             </table>
+            <div class="carrinho__detalhes">
+                <div class="frete">
+                    <label for="cep2">Prazo de entrega</label>
+                    <div class="input">
+                        <input type="text" id="cep2" placeholder="00000-000" />
+                        <button type="button" class="btn_calcular">Calcular</button>
+                    </div>
+                    <p>Tempo previsto para entrega</p>
+                    <a href="httpS://buscarcepinter.correios.com.br/app/endereco/index.php" target="_blank"
+                        rel="noopener noreferrer"></a>
+                </div>
+                <div class="cupom_desconto">
+                    <label for="cupom">Cupom de desconto</label>
+                    <div class="input">
+                        <input type="text" id="cupom">
+                        <button type="button" class="btn_aplicar">Aplicar</button>
+                    </div>
+                    <span class="desconto_cupom"></span>
+                </div>
+                <div class="resumo">
+                    <h3>Resumo</h3>
+                    <ul>
+                        <li>
+                            <span>Sub-total produtos</span>
+                            <span class="sub_total"></span>
+                        </li>
+                        <li>
+                            <span>Frete</span>
+                            <span class="valor_frete"></span>
+                        </li>
+                        <li>
+                            <span>Desconto</span>
+                            <span class="valor_desconto"></span>
+                        </li>
+                        <li>
+                            <span>Total compra</span>
+                            <span class="total_compra"></span>
+                        </li>
+                    </ul>
+                    <button type="button" class="btn_continuar">Continuar</button>
+                </div>
+            </div>
         </section>
     </main>
-    <script src="js/script.js"></script>
+    <script src="js/utils.js" type="module"></script>
+    <script src="js/script.js" type="module"></script>
 </body>
 
 </html>
