--- a/index.html
+++ b/index.html
@@ -273,55 +273,56 @@
                             <div class="input">
                                 <label for="estado">Estado*</label>
                                 <input type="text" class="input" id="estado" maxlength="2" required />
-                </div>
-                <div class="bloco">
-                    <input type="checkbox" class="checkbox" id="concordo" required>
-                    <label for="concordo">Concordo com a polÍtica de Privacidade e Termos de Uso.*</label>
-                </div>
-                <div class="botao">
-                    <button type="button" class="btn_finalizar_cadastro">Finalizar cadrastro</button>
-                </div>
-                </form>
-        </section>
-        <section class="pagamento"></section>
-        <h2>Pagamento</h2>
-        <p>* Campos obrigatórios</p>
-        <form action="" class="form_pagamento">
-            <div class="input">
-                <label for="numero_cartao">Número do cartão*</label>
-                <input type="text" id="numero_cartao" class="input" maxlength="19" placeholder="9999 9999 9999 9999" required />
-            </div>
-            <div class="input">
-                <label for="nome_impresso">Nome impresso*</label>
-                <input type="text" id="nome_impresso" class="input" required />
-            </div>
-            <div class="input">
-                <label for="validade">Validade*</label>
-                <input type="text" id="validade" class="input" maxlength="5" placeholder="99/99" required />
-            </div>
-            <div class="input">
-                <label for="codigo_seguranca">Código de Segurança*</label>
-                <input type="text" id="codigo_seguranca" class="input" maxlength="3" placeholder="999" required />
-            </div>
-            <div class="input">
-                <label for="numero_parcelas">Número de parcelas*</label>
-                <select id="numero_parcelas" required>
-                    <option value="1">À vista</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                </select>
-            </div>
-            <div class="bloco">
-                <input type="checkbox" class="checkbox" id="salvar_cartao">
-                <label for="salvar_cartao">Salvar cartão para minhas próximas compras.</label>
-            </div>
-            <div class="botao">
-                <button type="button" class="btn_finalizar_compra">Finalizar compra</button>
-            </div>
-            <div class="bloco">
-                <p>Ao finalizar a sua compra, você concorda com a nossa Política de trocas e devoluções.</p>
-            </div>
-        </form>
+                            </div>
+                            <div class="bloco">
+                                <input type="checkbox" class="checkbox" id="concordo" required>
+                                <label for="concordo">Concordo com a polÍtica de Privacidade e Termos de Uso.*</label>
+                            </div>
+                            <div class="botao">
+                                <button type="button" class="btn_finalizar_cadastro">Finalizar cadrastro</button>
+                            </div>
+                        </form>
+                    </section>
+                    <section class="pagamento">
+                        <h2>Pagamento</h2>
+                        <p>* Campos obrigatórios</p>
+                        <form action="" class="form_pagamento">
+                            <div class="input">
+                                <label for="numero_cartao">Número do cartão*</label>
+                                <input type="text" id="numero_cartao" class="input" maxlength="19" placeholder="9999 9999 9999 9999" required />
+                            </div>
+                            <div class="input">
+                                <label for="nome_impresso">Nome impresso*</label>
+                                <input type="text" id="nome_impresso" class="input" required />
+                            </div>
+                            <div class="input">
+                                <label for="validade">Validade*</label>
+                                <input type="text" id="validade" class="input" maxlength="5" placeholder="99/99" required />
+                            </div>
+                            <div class="input">
+                                <label for="codigo_seguranca">Código de Segurança*</label>
+                                <input type="text" id="codigo_seguranca" class="input" maxlength="3" placeholder="999" required />
+                            </div>
+                            <div class="input">
+                                <label for="numero_parcelas">Número de parcelas*</label>
+                                <select id="numero_parcelas" required>
+                                    <option value="1">À vista</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                </select>
+                            </div>
+                            <div class="bloco">
+                                <input type="checkbox" class="checkbox" id="salvar_cartao">
+                                <label for="salvar_cartao">Salvar cartão para minhas próximas compras.</label>
+                            </div>
+                            <div class="botao">
+                                <button type="button" class="btn_finalizar_compra">Finalizar compra</button>
+                            </div>
+                            <div class="bloco">
+                                <p>Ao finalizar a sua compra, você concorda com a nossa Política de trocas e devoluções.</p>
+                            </div>
+                        </form>
+                    </section>
     </main>
     <script src="js/utils.js" type="module"></script>
     <script src="js/script.js" type="module"></script>
