feat: finished Aula-24 Ajustess e LocalStorage

--- a/index.html
+++ b/index.html
@@ -26,10 +26,18 @@
             </a>
         </div>
         <div class="btn__carrinho">
-            <span class="material-symbols-outlined icons">
-                shopping_cart
-            </span>
-            <span class="numero_itens">0</span>
+            <div class="btn__carrinho_icone">
+                <span class="material-symbols-outlined icons">
+                    shopping_cart
+                </span>
+                <span class="numero_itens">0</span>
+            </div>
+            <div class="btn__carrinho_user">
+                <span class="material-symbols-outlined icone">
+                    account_circle
+                </span>
+                <span>User</span>
+            </div>
         </div>
     </header>
     <section class="top__fixed">
