--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-</head>
+    </head>
 <body>
     <header class="topo">
         <div class="topo__marca">
@@ -33,10 +33,11 @@
                 <span class="numero_itens">0</span>
             </div>
             <div class="btn__carrinho_user">
-                <span class="material-symbols-outlined icone">
+                <span id="btn_open_login" class="material-symbols-outlined icone">
                     account_circle
                 </span>
-                <span>User</span>
+                <span id="nome_usuario"></span>
+                <span id="btn_logout">Sair</span>
             </div>
         </div>
     </header>
@@ -233,9 +234,28 @@
                 </div>
             </div>
         </section>
+        <!--Aula 25 Formulário logar-->
+        <section class="modal_login hidden">
+            <h2>Entrar</h2>
+            <span class="btn_close_login">x</span>
+            <form class="form_logar">
+                <div class="input">
+                    <label for="email_login">E-mail</label>
+                    <input type="email" id="email_login" autofocus required>
+                </div>
+                <div class="input">
+                    <label for="senha_login">Senha</label>
+                    <input type="password" id="senha_login" autofocus required>
+                </div>
+                <div class="botao">
+                    <button type="submit" class="btn_logar">Entrar</button>
+                </div>
+            </form>
+        </section>
+        <div class="modal_overlay hidden"></div>
         <section class="identificacao">
             <h2>Identificação</h2>
-            <p>* Campos Obrigaórios</p>
+            <p>* Campos Obrigatórios</p>
             <form class="form_identificacao">
                 <div class="input">
                     <label for="nome">Nome Completo</label>
@@ -325,6 +345,7 @@
                     <button type="submit" class="btn_finalizar_cadastro">Finalizar cadastro</button>
                 </div>
             </form>
+
         </section>
         <section class="pagamento">
             <h2>Pagamento</h2>
