--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <link rel="stylesheet" href="css/media-source.css">
     <link rel="icon" href="./img/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    </head>
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+</head>
 <body>
     <header class="topo">
         <div class="topo__marca">
@@ -54,17 +54,17 @@
         </div>
     </section>
     <main>
-        <section class="produtos">
-            <div class="heading__produtos">
-                <h3>Os melhores sapatos e sandálias em um só lugar</h3>
-                <p>As marcas Beira Rio e Modare são as escolhas certas para fazerem seus pés ainda mais belos</p>
-            </div>
-            <section class="lista__produtos">
+    <section class="produtos">
+        <div class="heading__produtos">
+            <h3>Os melhores sapatos e sandálias em um só lugar</h3>
+            <p>As marcas Beira Rio e Modare são as escolhas certas para fazerem seus pés ainda mais belos</p>
+        </div>
+        <section class="lista__produtos">
             <!-- Cards gerados dinamicamente -->
-            </section>
         </section>
-        <div class="voltar">Voltar</div>
-        <section class="produto__detalhes">
+    </section>
+    <div class="voltar">Voltar</div>
+    <section class="produto__detalhes">
             <div class="produto__detalhes_imagens">
                 <figure>
                     <img src="https://placehold.co/300x200" alt="sandália">
@@ -234,7 +234,18 @@
                 </div>
             </div>
         </section>
-        <!--Aula 25 Formulário logar-->
+        <!--Aula 27-->
+        <section class="identifique_se">
+            <h2>Identifique-se</h2>
+            <div class="criar_conta">
+                <span class="btn btn_criar_conta">Criar conta</span>
+            </div>
+            ou 
+            <div class="entrar">
+                <button class="btn_fazer_login">Fazer login</button>
+            </div>
+        </section>
+        <!--Aula 25 Formulário Modal Logar-->
         <section class="modal_login hidden">
             <h2>Entrar</h2>
             <span class="btn_close_login">x</span>
@@ -248,11 +259,41 @@
                     <input type="password" id="senha_login" autofocus required>
                 </div>
                 <div class="botao">
-                    <button type="submit" class="btn_logar">Entrar</button>
+                    <button type="submit" class="btn_cadastrar">Entrar</button>
+                </div>
+                <div class="centralizar">
+                    <a href="" class="link_cadastrar">Cadastrar Usuário</a>
                 </div>
             </form>
         </section>
         <div class="modal_overlay hidden"></div>
+
+        <!--Aula 26 Formulário Modal Cadastrar Usuário-->
+        <section class="modal_cadastrar_usuario hidden">
+            <h2>Cadastrar</h2>
+            <span class="btn_close_cadastrar">x</span>
+            <form class="form_cadastrar_usuario">
+                <div class="input">
+                    <label for="email_usuario">E-mail</label>
+                    <input type="email" id="email_usuario" placeholder="user@email.com" required>
+                </div>
+                <div class="input">
+                    <label for="senha_usuario">Senha</label>
+                    <input type="password" id="senha_usuario" placeholder="mínimo 5 caracteres" required>
+                </div>
+                <div class="input">
+                    <label for="confirma_senha_usuario">Confirma a Senha</label>
+                    <input type="password" id="confirma_senha_usuario" required>
+                </div>
+                <div class="botao">
+                    <button type="submit" class="btn_cadastrar">Entrar</button>
+                </div>
+                <div class="centralizar">
+                    <span class="form_aviso"></span>
+                </div>
+            </form>
+        </section>
+        <div class="modal_overlay_cadastrar hidden"></div>
         <section class="identificacao">
             <h2>Identificação</h2>
             <p>* Campos Obrigatórios</p>
