feat: finished Aula-29 - finished Payment routines

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                     <label for="salvar_cartao">Salvar cartão para minhas próximas compras.</label>
                 </div>
                 <div class="botao">
-                    <button type="button" class="btn_finalizar_compra">Finalizar compra</button>
+                    <button type="submit" class="btn_finalizar_compra">Finalizar compra</button>
                 </div>
                 <div class="bloco">
                     <p>Ao finalizar a sua compra, você concorda com a nossa Política de trocas e devoluções.</p>
